<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gadiworks_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="195dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnRadioButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnListView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCustomViewTutorial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSurfaceView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnVideoViewTutorial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTutorial7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button7"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTutorial8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button8"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTutorial9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button9"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>